--- a/src/app/exercice3/exercice3.component.html
+++ b/src/app/exercice3/exercice3.component.html
@@ -1,3 +1,3 @@
-<p>
-  exercice3 works!
-</p>
+<button type="button" (click)="statut=!statut">Click Me!</button>
+<p *ngIf="statut">p1</p>
+<p *ngIf="!statut">p2</p>
