Do exercice 1 upate documentation refactor some code

--- a/src/app/exercice1/exercice1.component.html
+++ b/src/app/exercice1/exercice1.component.html
@@ -1,3 +1,4 @@
-<p>
-  exercice1 works!
+<button type="button" (click)="updateCount()">Increase count!</button>
+<p [ngStyle] ="myStyle">
+  {{count}}
 </p>
