--- a/src/app/exercice3/exercice3.component.html
+++ b/src/app/exercice3/exercice3.component.html
@@ -1,3 +1,3 @@
-<button type="button" (click)="statut=!statut">Click Me!</button>
+<button type="button" (click)="updateStatut()">Click Me!</button>
 <p *ngIf="statut">p1</p>
 <p *ngIf="!statut">p2</p>
